# StudentAppAPI

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: dao.py  router.py  schemas.py
app/dao/: base.py
app/feedback/: dao.py  models.py  rb.py  router.py  schemas.py
app/migration/: env.py
app/migration/versions/: 1288ae5f13ea_revision.py  1914520029f6_revision.py  1d9a83428938_revision.py  200ef5ca7dbc_revision.py  27473af3062f_revision.py  3fe21bfa68f3_revision.py  4e33ea113654_revision.py  4f1769ece89b_revision.py  501ce6a1f348_revision.py  597ada2cad82_revision.py  6eaba8cf98cf_revision.py  7084e1df6920_revision.py  777ec9b88799_revision.py  78b1de54cbed_revision.py  7fcee94c0c7b_revision.py  81aa754c6e85_revision.py  95ff39979fc2_revision.py  968fdfd699b2_revision.py  aaa3a993f8a1_revision.py  b79a576a62df_revision.py  ccbc6f42d10a_revision.py  cd3570c9c3ed_revision.py  d2f7ceb0ace5_revision.py  df8eb437a0e6_revision.py  ea4a8e00a0af_revision.py  f4718561a2fa_revision.py
app/schedule/: dao.py  models.py  rb.py  router.py  schemas.py
app/students/: dao.py  models.py  rb.py  router.py  schemas.py
tests/: conftest.py
tests/integration/: test_auth.py  test_feedback.py  test_groups.py  test_students.py
utils/: main.py
utils/data/: paths.json
utils/email_sender/: config.py  sender.py
utils/parsers/: schedule_parser.py
utils/pdf_extractor/: parse_pdf_schedule.py  string_parser.py
utils/pdf_extractor/uploads/: groups.json  schedule.json
