[project]
name = "studentappapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "ruff>=0.11.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migration",
    "pdf_extractor"
]
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "C", "F", "N", "ASYNC", "C4", "COM", "PIE", "T20", "RET", "SIM", "TID", "TC", "ARG", "PL", "UP", "FA", "I"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
